--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -80,7 +80,7 @@
         You can and should control your own destiny
       </h2>
       <p class="pb-4">
-        Don&#39;t stake your reputation on a bundle of code written by a stranger.
+        With a minimal investment of time you can learn the skills necessary to build your own charts.
       </p>
 
       <h3 class="pt-4 pb-2 text-grey-dark font-thin italic text-2xl">
