--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -36,7 +36,7 @@
     <div class="w-1/6 md:w-1/5 xl:w-1/4"></div>
     <div class="w-5/6 md:w-3/5 xl:w-1/2 font-sans text-lg text-grey-darkest leading-normal">
       <h1 class="text-center py-8 text-5xl">
-        Don’t stake your reputation on a stranger’s API
+        Do your charts look like crap on mobile?
       </h1>
 
       <div class="mx-auto text-center">
