--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -289,7 +289,7 @@
       <!-- OVERCOME OBJECTIONS -->
       <a name="objections"></a>
       <h2 class="pt-8 pb-1 text-3xl">
-        The fastest path to D3 proficiency
+        From zero to D3 in a hurry
       </h2>
       <p class="pb-4">
         These materials contain no magic. Every bit of information in them is freely available on the internet. Heck, that's how I learned!
@@ -359,10 +359,10 @@
         Since 2014 <span class="font-bold bg-purple-lighter px-1">more than 25,000 developers</span> have spent <span class="font-bold bg-purple-lighter px-1">over 18,000 hours watching</span> my video lessons. That doesn't happen with educational content that doesn't work.
       </p>
       <p class="pb-4">
-        Obsessed with clarity, brevity, and information density, you can be assured this material will not waste your time. You'll get the knowledge you need to be successful in the shortest time possible.
+        This material will not waste your time. You'll get the knowledge you need to be successful in the shortest time possible.
       </p>
-      <p class="pb-4">
-        Your success is my number one priority.
+      <p class="pb-4 font-bold italic">
+        Your success is my top priority.
       </p>
 
       <!-- CTA #2 -->
@@ -446,7 +446,7 @@
       <!-- URGENCY -->
       <a name="urgency"></a>
       <h2 class="pt-8 pb-1 text-3xl">
-        Take control of your career
+        Don't wait, take control of your career today
       </h2>
       <p class="pb-4">
         Upgrading your skillset puts you in the driver's seat. It increases your market value. It keeps you from being at the mercy of off-the-shelf code that is bound to disappoint.
