--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -130,7 +130,7 @@
       <!-- FIX -->
       <a name="fix"></a>
       <h2 class="pt-8 pb-1 text-3xl">
-        Learning D3 doesn&#39;t have to be hard
+        Learning D3 doesn&#39;t have to be a struggle
       </h2>
       <p class="pb-4">
         Web developers who already know HTML, CSS, and JavaScript can get up and running with D3 in a handful of hours. <em>D3 + SVG: How to Create Flawless Charts for Any Screen</em> will take you from standard web dev to your team&#39;s go-to data visualization engineer in just 10 concise chapters.
