--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -12,9 +12,18 @@
   <meta name="twitter:image" content="https://imgur.com/meMiVpd.png" />
   <meta name="twitter:creator" content="@bclinkinbeard" />
   <title>D3 + SVG: How to Create Flawless Charts for Any Screen</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Quicksand" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:600i,700" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
   <style>
+    h2, .price, .testimonial h3 {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    .testimonial h3 {
+      font-weight: 600;
+      font-style: italic;
+    }
+
     .pricing {
       width: 100vw;
       margin-left: calc(-1 * ((100vw - 100%) / 2));
@@ -171,7 +180,7 @@
       <div class="pricing flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6 pt-8">
         <div class="z-0 mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
           <h2 class="py-4 shadow bg-blue-dark text-white">Just the Book</h2>
-          <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$39</div>
+          <div class="price text-4xl py-6">$39</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
           <ul class="text-left inline-block mx-auto pl-4 leading-loose">
             <li>D3 + SVG eBook</li>
@@ -194,7 +203,7 @@
               </li>
             </ul>
           </div>
-          <div class="text-5xl py-6" style="font-family: 'Montserrat', sans-serif;">$99</div>
+          <div class="price text-5xl py-6">$99</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
           <ul class="text-left inline-block mx-auto pl-4 leading-loose">
             <li class="text-grey-darker font-thin">D3 + SVG eBook</li>
@@ -215,7 +224,7 @@
 
         <div class="z-0 mt-4 lg:mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
           <h2 class="py-4 shadow bg-blue-dark text-white">Coaching Call</h2>
-          <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$299</div>
+          <div class="price text-4xl py-6">$299</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
           <ul class="text-left inline-block mx-auto pr-2 leading-loose">
             <li class="text-grey-darker font-thin">D3 + SVG eBook</li>
@@ -249,10 +258,10 @@
       <h2 class="pt-8 pb-6 text-3xl">
         Does this stuff really work?
       </h2>
-      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/nicholas.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
-          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;Highly recommended!&quot;</h3>
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;Highly recommended!&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
             “Joyfully educational” is rare in a tech book but it’s how I would describe D3 + SVG. I love the writing style and spending extra time with the code examples is very helpful for all the new concepts and knowledge I’m gaining. <span class="bg-yellow-light px-1">Highly recommended!</span class="bg-yellow">
           </blockquote>
@@ -261,10 +270,10 @@
           </p>
         </div>
       </div>
-      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/sundar.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
-          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;You cannot go wrong with it.&quot;</h3>
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;You cannot go wrong with it.&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
             Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. <span class="bg-yellow-light px-1">You cannot go wrong with it.</span>
           </blockquote>
@@ -273,10 +282,10 @@
           </p>
         </div>
       </div>
-      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/denise.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
-          <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;A fantastic introduction to SVG.&quot;</h3>
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;A fantastic introduction to SVG.&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
             D3 + SVG is <span class="bg-yellow-light px-1">a fantastic introduction to SVG.</span> It teaches you how to understand and create common D3 charts while adhering to established community conventions. If you’re just starting out this is a great resource.
           </blockquote>
@@ -370,7 +379,7 @@
       <div class="pricing flex flex-col lg:flex-row lg:w-full md:w-2/3 mx-auto mb-6 pt-8">
         <div class="z-0 mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
           <h2 class="py-4 shadow bg-blue-dark text-white">Just the Book</h2>
-          <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$39</div>
+          <div class="price text-4xl py-6">$39</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
           <ul class="text-left inline-block mx-auto pl-4 leading-loose">
             <li>D3 + SVG eBook</li>
@@ -393,7 +402,7 @@
               </li>
             </ul>
           </div>
-          <div class="text-5xl py-6" style="font-family: 'Montserrat', sans-serif;">$99</div>
+          <div class="price text-5xl py-6">$99</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
           <ul class="text-left inline-block mx-auto pl-4 leading-loose">
             <li class="text-grey-darker font-thin">D3 + SVG eBook</li>
@@ -414,7 +423,7 @@
 
         <div class="z-0 mt-4 lg:mt-0 pb-3 lg:py-6 shadow lg:w-1/3 text-slate text-center">
           <h2 class="py-4 shadow bg-blue-dark text-white">Coaching Call</h2>
-          <div class="text-4xl py-6" style="font-family: 'Montserrat', sans-serif;">$299</div>
+          <div class="price text-4xl py-6">$299</div>
           <div class="bg-blue-dark mb-6 mt-2 mx-auto py-1 rounded-full shadow text-white uppercase w-1/2">Details</div>
           <ul class="text-left inline-block mx-auto pr-2 leading-loose">
             <li class="text-grey-darker font-thin">D3 + SVG eBook</li>
