--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -435,9 +435,14 @@
     <h1 class="lh-title tc mb0">What you'll receive</h1>
     <div class="flex flex-column pv2 f4-ns">
       <p>A concise, practical lesson delivered via email for five consecutive weekdays. Each lesson is short and to the point (around 1000 words) and packed with information. The lessons provide strong foundational knowledge of core D3 concepts, preparing you for further exploration and mastery.</p>
-      <p>Hate waiting?</p>
-      <p>Want all the lessons right away, plus a book and 20 extra CodePen examples?</p>
-     <p><a href="http://d3svg.com">D3 + SVG: How to Create Flawless Charts for Any Screen</a> is a book that picks up where D3 in 5 Days leaves off. You also get the full D3 in 5 Days course as a single PDF, meaning you can read the whole thing in an afternoon. You can even get a 2.5 hour video course, <em>Build Interactive JavaScript Charts with D3 v4</em>. <a href="http://d3svg.com">Click here to check it out!</a></p>
+    </div>
+  </div>
+  <div class="center measure-wide f5 lh-copy ph4 ph0-l">
+    <h1 class="lh-title tc mb0 dn db-ns">Want the whole course now?</h1>
+    <h1 class="lh-title tc mb0 dn-ns">Hate waiting?</h1>
+    <div class="flex flex-column items-center pv2 f4-ns">
+      <p>You can get all the lessons immediately, plus a book and 20 extra CodePen examples in <a href="http://d3svg.com">D3 + SVG: How to Create Flawless Charts for Any Screen</a>.</p>
+      <p>A book that picks up where D3 in 5 Days finishes, you also get the full D3 in 5 Days course as a single PDF. You could probably read them both in an afternoon. You can even get a 2.5 hour video course, <em>Build Interactive JavaScript Charts with D3 v4</em>. <a href="http://d3svg.com">Click here to learn more!</a></p>
     </div>
   </div>
   <div class="center measure-wide f5 lh-copy ph4 ph0-l">
