--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -283,6 +283,18 @@
         </div>
       </div>
       <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
+        <img src="../headshots/joe.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;Provides a blueprint for success.&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            I've been watching Ben's D3 videos for a long time, and this book is a perfect companion. It really demystifies concepts that can be tough to get your head around and <span class="bg-yellow-light px-1">provides a blueprint for success</span>. I would definitely recommend Ben's content to anyone hoping to add D3.js to their skillset.
+          </blockquote>
+          <p class="py-4">
+            &#8213; Joe Maddalone, Lead UI Developer, CloudBees
+          </p>
+        </div>
+      </div>
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/denise.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
           <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;A fantastic introduction to SVG.&quot;</h3>
