--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -283,6 +283,18 @@
         </div>
       </div>
       <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
+        <img src="../headshots/alan.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;The examples are spot on&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            A great introduction to d3. <span class="bg-yellow-light px-1">The examples are spot on</span> and cover everything you need to know to get started.
+          </blockquote>
+          <p class="py-4">
+            &#8213; <a href="https://twitter.com/alangwilson">Alan Wilson</a>, Senior UI Designer, Adobe
+          </p>
+        </div>
+      </div>
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/joe.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
           <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;Provides a blueprint for success.&quot;</h3>
