--- a/static/d3svg/thanks/social.html
+++ b/static/d3svg/thanks/social.html
@@ -2,15 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:description" content="Learn to create charts that look great anywhere using SVG and D3.js" />
-  <meta name="twitter:title" content="D3 + SVG: How to Create Flawless Charts for Any Screen" />
-  <meta name="twitter:site" content="@bclinkinbeard" />
-  <meta name="twitter:image" content="https://imgur.com/meMiVpd.png" />
-  <meta name="twitter:creator" content="@bclinkinbeard" />
   <title>D3 + SVG: How to Create Flawless Charts for Any Screen</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:600i,700" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
@@ -42,7 +37,6 @@
 </head>
 
 <body>
-
   <div class="flex">
     <div class="w-1/5 xl:w-1/4"></div>
     <div class="w-5/5 xl:w-1/2 font-sans text-lg text-grey-darkest leading-normal">
@@ -60,44 +54,23 @@
         </div>
       </div>
 
-      <div id="discount" class="w-5/6 md:w-2/3 mx-auto">
+      <div class="w-5/6 md:w-2/3 mx-auto">
         <h2 class="pt-8 pb-1 text-3xl">
-          Want a discount on that video course?
+          Spare one last click?
         </h2>
         <p class="pb-4">
-          <em>Build Interactive JavaScript Charts with D3 v4</em> is a 2.5 hour course that has been watched by several thousand developers. Let me walk you through 26 D3.js lessons that start with installing the library and go all the way through to complex animated transitions.
-        </p>
-        <h2 class="pt-8 pb-1 text-3xl">
-          Special pricing for buyers only
-        </h2>
-        <p class="pb-4">
-          As a thank you for purchasing the book, you can <strong>buy the video course for just $25!!</strong>
+          Don't keep this screaming good deal to yourself, share it with the world!
         </p>
         <p class="pb-4">
-          This deal will NOT be offered anywhere else or again.
+          The button below will populate a new tweet form with the following quote.
         </p>
+        <blockquote class="border-l-8 font-light italic pl-2 text-grey-darker">
+          I'm learning how to build my own charts with D3 + SVG from @bclinkinbeard! Want to do the same? No experience necessary! http://bclnk.com/d3svg
+        </blockquote>
         <div class="text-center m-6 mx-auto">
-          <a href="https://transactions.sendowl.com/packages/60235/AD48420E/view" rel="nofollow">
-            <button class="bg-green hover:bg-green-light text-white p-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
-              Buy <strong>26 videos for $25</strong>
-            </button>
-          </a>
-        </div>
-      </div>
-      <div id="share" class="hidden w-5/6 md:w-2/3 mx-auto">
-        <h2 class="pt-8 pb-1 text-3xl">
-          Can I have one last click?
-        </h2>
-        <p class="pb-4">
-          The more people that know about this book, the better.
-        </p>
-        <p class="pb-4">
-          Click to tweet?
-        </p>
-        <div class="text-center m-6 mx-auto">
-          <a href="https://transactions.sendowl.com/packages/60235/AD48420E/view" rel="nofollow">
-            <button class="bg-purple hover:bg-purple-light text-white p-6 border-b-4 border-purple-dark hover:border-purple rounded uppercase">
-              <strong>Tweet Out Loud</strong>
+          <a href="http://twitter.com/home?status=I'm learning how to build my own charts with D3 %2B SVG from @bclinkinbeard! Want to do the same? No experience necessary! http://bclnk.com/d3svg" rel="nofollow">
+            <button class="bg-blue hover:bg-blue-light text-white p-6 border-b-4 border-blue-dark hover:border-blue rounded uppercase">
+              <strong>Share the Love!</strong>
             </button>
           </a>
         </div>
@@ -107,14 +80,6 @@
     <div class="w-1/5 xl:w-1/4"></div>
   </div>
 
-  <script>
-    // if (Math.round(Math.random()) === 0) {
-    //   document.querySelector('#discount').style.display = 'block';
-    // } else {
-    //   document.querySelector('#share').style.display = 'block';
-    // }
-  </script>
-  <script type="text/javascript" src="https://transactions.sendowl.com/assets/sendowl.js"></script>
   <!-- Drip -->
   <script type="text/javascript">
     var _dcq = _dcq || [];
