--- a/static/d3svg/thanks/discount.html
+++ b/static/d3svg/thanks/discount.html
@@ -56,21 +56,15 @@
       </div>
 
       <div class="w-5/6 md:w-2/3 mx-auto">
-        <h2 class="pt-8 pb-1 text-3xl">
-          Want a discount on that video course?
-        </h2>
-        <p class="pb-4">
-          <em>Build Interactive JavaScript Charts with D3 v4</em> is a 2.5 hour course that has been watched by several thousand developers. Let me walk you through 26 D3.js lessons that start with installing the library and go all the way through to complex animated transitions.
-        </p>
-        <h2 class="pt-8 pb-1 text-3xl">
-          Special pricing for buyers only
-        </h2>
-        <p class="pb-4">
-          As a thank you for purchasing the book, you can <strong>buy the video course for just $25!!</strong>
-        </p>
-        <p class="pb-4">
-          This deal will NOT be offered anywhere else or again.
-        </p>
+      <h2 class="pt-8 pb-1 text-3xl">
+        You just unlocked special pricing
+      </h2>
+      <p class="pb-4">
+        As a thank you for purchasing the book, you can <strong>buy the video course for just $25!!</strong>
+      </p>
+      <p class="pb-4">
+        This deal will NOT be offered anywhere else or again.
+      </p>
         <div class="text-center m-6 mx-auto">
           <a href="https://transactions.sendowl.com/packages/60235/AD48420E/view" rel="nofollow">
             <button class="bg-green hover:bg-green-light text-white p-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
