--- a/static/d3svg/thanks/social.html
+++ b/static/d3svg/thanks/social.html
@@ -54,21 +54,24 @@
         </div>
       </div>
 
-      <div class="w-5/6 md:w-2/3 mx-auto">
-        <h2 class="pt-8 pb-1 text-3xl">
-          Spare one last click?
+      <div class="w-5/6 md:w-2/3 mx-auto pt-8">
+        <p class="pb-4">
+          Download instructions have been sent via email.
+        </p>
+        <h2 class="pb-1 text-3xl">
+          Share the good news. And a discount!
         </h2>
         <p class="pb-4">
-          Don't keep this screaming good deal to yourself, share it with the world!
+          Don't keep this stuff a secret, share it with the world! Click below to <strong>offer your followers 15% off their own purchase!</strong>
         </p>
         <p class="pb-4">
           The button below will populate a new tweet form with the following quote.
         </p>
         <blockquote class="border-l-8 font-light italic pl-2 text-grey-darker">
-          I'm learning how to build my own charts with D3 + SVG from @bclinkinbeard! Want to do the same? No experience necessary! http://bclnk.com/d3svg
+          I'm learning how to build my own charts with D3 + SVG from @bclinkinbeard! Want to do the same? Save 15% for a limited time with code D3SVG! http://bclnk.com/d3svg
         </blockquote>
         <div class="text-center m-6 mx-auto">
-          <a href="http://twitter.com/home?status=I'm learning how to build my own charts with D3 %2B SVG from @bclinkinbeard! Want to do the same? No experience necessary! http://bclnk.com/d3svg" rel="nofollow">
+          <a href="http://twitter.com/home?status=I'm learning how to build my own charts with D3 %2B SVG from @bclinkinbeard! Want to do the same? Save 15%25 for a limited time with code D3SVG! http://bclnk.com/d3svg" rel="nofollow">
             <button class="bg-blue hover:bg-blue-light text-white p-6 border-b-4 border-blue-dark hover:border-blue rounded uppercase">
               <strong>Share the Love!</strong>
             </button>
