--- a/static/d3svg/thanks/social.html
+++ b/static/d3svg/thanks/social.html
@@ -68,10 +68,10 @@
           The button below will populate a new tweet form with the following quote.
         </p>
         <blockquote class="border-l-8 font-light italic pl-2 text-grey-darker">
-          I'm learning how to build my own charts with D3 + SVG from @bclinkinbeard! Want to do the same? Save 15% for a limited time with code D3SVG! http://bclnk.com/d3svg
+          I'm learning how to build my own charts with D3 + SVG from @bclinkinbeard! Want to do the same? Save 15% through December 20 with code D3SVG! http://bclnk.com/d3svg
         </blockquote>
         <div class="text-center m-6 mx-auto">
-          <a href="http://twitter.com/home?status=I'm learning how to build my own charts with D3 %2B SVG from @bclinkinbeard! Want to do the same? Save 15%25 for a limited time with code D3SVG! http://bclnk.com/d3svg" rel="nofollow">
+          <a href="http://twitter.com/home?status=I'm learning how to build my own charts with D3 %2B SVG from @bclinkinbeard! Want to do the same? Save 15%25 through December 20 with code D3SVG! http://bclnk.com/d3svg" rel="nofollow">
             <button class="bg-blue hover:bg-blue-light text-white p-6 border-b-4 border-blue-dark hover:border-blue rounded uppercase">
               <strong>Share the Love!</strong>
             </button>
