Avoid ad blockers

--- a/static/d3svg/thanks/social.html
+++ b/static/d3svg/thanks/social.html
@@ -71,7 +71,7 @@
           I'm learning how to build my own charts with D3 + SVG from @bclinkinbeard! Want to do the same? Save 15% through December 20 with code D3SVG! http://bclnk.com/d3svg
         </blockquote>
         <div class="text-center m-6 mx-auto">
-          <a href="http://twitter.com/home?status=I'm learning how to build my own charts with D3 %2B SVG from @bclinkinbeard! Want to do the same? Save 15%25 through December 20 with code D3SVG! http://bclnk.com/d3svg" rel="nofollow">
+          <a href="http://bclnk.com/d3svgtwt" rel="nofollow">
             <button class="bg-blue hover:bg-blue-light text-white p-6 border-b-4 border-blue-dark hover:border-blue rounded uppercase">
               <strong>Share the Love!</strong>
             </button>
@@ -82,21 +82,6 @@
 
     <div class="w-1/5 xl:w-1/4"></div>
   </div>
-
-  <!-- Drip -->
-  <script type="text/javascript">
-    var _dcq = _dcq || [];
-    var _dcs = _dcs || {};
-    _dcs.account = '4436187';
-
-    (function() {
-      var dc = document.createElement('script');
-      dc.type = 'text/javascript'; dc.async = true;
-      dc.src = '//tag.getdrip.com/4436187.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(dc, s);
-    })();
-  </script>
 </body>
 
 </html>
