Call out video duration

--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -191,7 +191,7 @@
         The Complete Bundle includes <em>Build Interactive JavaScript Charts with D3 v4</em>, an in-depth video course with <strong>2.5 hours of instruction spread across 26 bite-sized lessons.</strong> This course was previously only available to Egghead PRO members.
       </p>
       <p class="pb-4">
-        Want to see a sample? Check this out and remember <strong>the course includes 25 more lessons just like this.</strong>
+        Got 10 minutes? Check out this sample lesson and remember <strong>the course includes 25 more lessons like this.</strong>
       </p>
       <div class="videoWrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/aJy2Zse7vFI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
@@ -286,7 +286,7 @@
       </h2>
       <p class="pb-4">
         Plain and simple: if you&#39;re not completely satisfied I don&#39;t want to keep your money. Email me at <a href='mailto:ben@knowbetter.io' target='_blank'>ben@knowbetter.io</a> within 30 days of your purchase date and I will refund every cent of your money, no questions asked.
-    </p>
+      </p>
       <!-- End Pricing Table -->
 
       <!-- SOCIAL PROOF -->
