Highlight more text

--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -425,7 +425,7 @@
         I'm Ben Clinkinbeard, a developer and instructor with more than 15 years experience. I've been working with D3.js professionally since 2011.
       </p>
       <p class="pb-4">
-        Since 2014 <span class="font-bold bg-purple-lighter px-1">more than 25,000 developers</span> have spent <span class="font-bold bg-purple-lighter px-1">over 18,000 hours watching</span> my video lessons. That doesn't happen with educational content that doesn't work.
+        Since 2014 <span class="font-bold bg-purple-lighter px-1">more than 25,000 developers</span> have spent <span class="font-bold bg-purple-lighter px-1">over 18,000 hours watching my video lessons.</span> That doesn't happen with educational content that doesn't work.
       </p>
       <p class="pb-4">
         This material will not waste your time. You'll get the knowledge you need to be successful in the shortest time possible.
