--- a/static/thanks/index.html
+++ b/static/thanks/index.html
@@ -23,19 +23,13 @@
       text-align: left;
     }
 
-    .videoWrapper {
-      position: relative;
-      padding-bottom: 56.25%; /* 16:9 */
-      padding-top: 25px;
-      height: 0;
-    }
-
-    .videoWrapper iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+    code {
+      white-space: nowrap;
+      background: #f7f7f9;
+      color: #de0053;
+      border: 1px solid #e1e1e1;
+      padding: 1px 3px;
+      border-radius: 3px;
     }
   </style>
   <!-- Piwik -->
@@ -58,101 +52,97 @@
 <body>
 
   <div class="flex">
-    <div class="w-1/6 md:w-1/5 xl:w-1/3"></div>
-    <div class="w-5/6 md:w-3/5 xl:w-1/3 font-sans text-center text-lg text-grey-darkest leading-normal">
+    <div class="w-1/6 md:w-1/5 xl:w-1/4"></div>
+    <div class="w-5/6 md:w-3/5 xl:w-1/2 font-sans text-center text-lg text-grey-darkest leading-normal">
+      <!-- START OF CONTENT COLUMN -->
       <h1 class="py-8 text-5xl">
-        Now THAT was smart
+        Thanks for subscribing!
       </h1>
 
-      <img src="https://i.imgur.com/QVLPeGi.gif" alt="">
+      <p class="pb-4">
+        The first email, <strong>D3 Day 1: Building Blocks</strong>, is on its way to your inbox. If you don't see it soon, please check your spam folder.
+      </p>
 
-      <h2 class="pt-8 pb-1 text-3xl text-center italic">
-        🎤🎤🎤
-        <span class="block">But wait, there's more!!!</span>
-        🎤🎤🎤
+      <h2 class="pt-4 pb-1 text-3xl text-left">
+        Free Bonus for jQuery folks
       </h2>
+
       <p class="pb-4">
-        Did you know selecting items in D3 is virtually identical to selecting items in jQuery?
+        Did you know selecting items in D3 is virtually identical to selecting items in jQuery? Yep, which means if you know jQuery you have a MASSIVE head start on learning D3.
       </p>
       <p class="pb-4">
-        Yep, if you know jQuery you have a MASSIVE head start on learning D3. Selections, as D3 calls them, are a fundamental concept in D3. To be sure, they take it a lot further than jQuery does, but the skills are extremely transferable.
+        To help you grok d3 much quicker I've created a downloadable cheatsheet. You can print it out and keep on your desk, bookmark it, or simply download it for offline viewing using the button below.
       </p>
-      <p class="pb-4">
-        Click below to open your free <strong><em>jQuery, Meet D3</em></strong> reference sheet!
-      </p>
-      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
-        <div class="m-6">
-          <a href="https://transactions.sendowl.com/packages/60051/56620417/view" rel="nofollow">
-            <button class="bg-green hover:bg-green-light text-white font-bold p-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
-              Download PDF
-            </button>
-          </a>
-        </div>
+      <div class="mb-8">
+        <a href="" rel="nofollow">
+          <button class="w-full md:w-3/5 bg-green hover:bg-green-light text-white font-bold p-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
+            Download "D3 for jQuery Developers"
+          </button>
+        </a>
       </div>
 
-      <h2 class="pt-8 pb-1 text-3xl font-light">
-        Want to go further, faster?
+      <h2 class="mt-8 pt-8 pb-1 text-left text-3xl font-light">
+        15% off my book <span class="whitespace-no-wrap">D3 + SVG</span>
       </h2>
       <p class="pb-4">
-        I wrote a book called <a href="http://bclnk.com/d3svg">D3 + SVG: How to Create Flawless Charts for Any Screen</a>, and it bundles the whole D3 in 5 Days course as a single PDF.
+        Turbo charge your charting chops with my book <em>D3 + SVG: How to Create Flawless Charts for Any Screen</em> which is available to you at 15% off any tier if you use coupon code <code>INNERCIRCLE</code> at checkout.
       </p>
       <p class="pb-4">
-          You can learn the basics in an afternoon instead of a week.
+        The book picks up exactly where the course leaves off. It's divided into 2 parts covering the basics of SVG itself, and then using D3 APIs to create SVG charts programmatically. It's also chock full of CodePen examples with context and explanation for each.
       </p>
       <p class="pb-4">
-          Once you breeze through the intro, the book picks up exactly where the course leaves off.
+        Pssst, it bundles the whole D3 in 5 Days course as a single PDF. You can learn the basics in a single afternoon instead of a week.
       </p>
-      <p class="pb-4">
-        This book is divided into 2 parts. The first 4 chapters cover the basics of SVG itself, and the last 6 chapters introduce D3 APIs and techniques for creating SVG charts programmatically.
-      </p>
-      <p class="pb-4">
-        The book is chock full of 20+ CodePen examples with context and explanation for each.
-      </p>
-      <div class="flex flex-col lg:flex-row items-center lg:items-start pb-6">
-        <div class="m-6">
-          <a href="https://transactions.sendowl.com/packages/60051/56620417/view" rel="nofollow">
-            <button class="bg-green hover:bg-green-light text-white font-bold p-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
-              Buy the book
-            </button>
-          </a>
-        </div>
+      <div class="mb-8">
+        <a href="http://drip.la/c/eyJhY2NvdW50X2lkIjoiNDQzNjE4NyIsInRyaWdnZXJfaWQiOiI5NzA2ODMyNDciLCJkeW5hbWljX3VybCI6bnVsbCwidXJsIjoiaHR0cHM6Ly9iZW5jbGlua2luYmVhcmQuY29tL2Qzc3ZnLyJ9" rel="nofollow">
+          <button class="w-full md:w-3/5 bg-green hover:bg-green-light text-white font-bold p-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
+            Learn more about my book D3 + SVG
+          </button>
+        </a>
       </div>
 
-      <h2 class="pt-8 pb-1 text-3xl font-light">
-        A clear path to mastery
+      <h2 class="pt-8 pb-6 text-3xl">
+        What do readers think?
       </h2>
-      <p class="pb-4">
-        I'm Ben Clinkinbeard, a developer and instructor with more than 15 years experience. I've been working with D3.js professionally since 2011.
-      </p>
-      <p class="pb-4">
-        Since 2014 <span class="font-bold bg-purple-lighter px-1">more than 25,000 developers</span> have spent <span class="font-bold bg-purple-lighter px-1">over 18,000 hours watching</span> my video lessons. That doesn't happen with educational content that doesn't work.
-      </p>
-      <p class="pb-4">
-        This material will not waste your time. You'll get the knowledge you need to be successful in the shortest time possible.
-      </p>
-      <p class="pb-4">
-        <a href="http://bclnk.com/d3svg#pricing">The Complete Bundle</a> includes <em>Build Interactive JavaScript Charts with D3 v4</em>, an in-depth video course with <strong>2.5 hours of instruction spread across 26 bite-sized lessons.</strong> This course was previously only available to Egghead PRO members.
-      </p>
-      <p class="pb-4">
-        Curious? Check out the sample lesson below.
-      </p>
-      <div class="videoWrapper">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/7XyTDHBp0ME" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-      </div>
-      <p class="pt-4 pb-4">
-        When you <a href="https://transactions.sendowl.com/packages/59871/50315877/view">purchase The Complete Bundle</a> you also receive 3 months access to group Q+A office hours. Bring your questions and code samples and we&#39;ll sort them out together!
-      </p>
-      <div class="flex flex-col lg:flex-row items-center text-center lg:items-start pb-8">
-        <div class="m-6">
-          <a href="http://bclnk.com/d3svg#pricing" rel="nofollow">
-            <button class="bg-green hover:bg-green-light text-white font-bold p-6 border-b-4 border-green-dark hover:border-green rounded uppercase">
-              Show me the prices!
-            </button>
-          </a>
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6 text-left">
+        <img src="../headshots/joe.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;Provides a blueprint for success.&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            I've been watching Ben's D3 videos for a long time, and this book is a perfect companion. It really demystifies concepts that can be tough to get your head around and <span class="bg-yellow-light px-1">provides a blueprint for success</span>. I would definitely recommend Ben's content to anyone hoping to add D3.js to their skillset.
+          </blockquote>
+          <p class="py-4">
+            &#8213; Joe Maddalone, Lead UI Developer, CloudBees
+          </p>
         </div>
       </div>
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6 text-left">
+        <img src="../headshots/sundar.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;You cannot go wrong with it.&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. <span class="bg-yellow-light px-1">You cannot go wrong with it.</span>
+          </blockquote>
+          <p class="py-4">
+            &#8213; <a href="http://eesur.surge.sh">Sundar Singh</a>, Data Visualisation Developer, Times Higher Education
+          </p>
+        </div>
+      </div>
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6 text-left">
+        <img src="../headshots/denise.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;A fantastic introduction to SVG.&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            D3 + SVG is <span class="bg-yellow-light px-1">a fantastic introduction to SVG.</span> It teaches you how to understand and create common D3 charts while adhering to established community conventions. If you’re just starting out this is a great resource.
+          </blockquote>
+          <p class="py-4">
+            &#8213; <a href="http://github.com/denisemauldin">Denise Mauldin</a>, Full Stack Software Engineer
+          </p>
+        </div>
+      </div>
+      <!-- END OF CONTENT COLUMN -->
     </div>
-    <div class="w-1/6 md:w-1/5 xl:w-1/3"></div>
+    <div class="w-1/6 md:w-1/5 xl:w-1/4"></div>
   </div>
 
   <script type="text/javascript" src="https://transactions.sendowl.com/assets/sendowl.js"></script>
