--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -184,6 +184,7 @@
         Guaranteed.
       </p>
 
+      <a name="video"></a>
       <h3 class="pt-4 pb-2 text-grey-dark font-thin italic text-2xl">
         Want to dive even deeper?
       </h3>
