Switch video to data joins

--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -195,7 +195,7 @@
         Got 10 minutes? Check out this sample lesson and remember <strong>the course includes 25 more lessons like this.</strong>
       </p>
       <div class="videoWrapper">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/aJy2Zse7vFI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7XyTDHBp0ME" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
       </div>
       <p class="pt-8 pb-4">
         The Complete Bundle also includes 3 months access to group Q+A office hours. Bring your questions and code samples and we&#39;ll sort them out together!
