Add Lukas testimonial

--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -355,6 +355,18 @@
           </p>
         </div>
       </div>
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
+        <img src="../headshots/lukas.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;Clear code examples to reinforce the concepts.&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            Once again, Ben has done a fantastic job of taking a complex topic and breaking it down into small, digestible pieces with <span class="bg-yellow-light px-1">clear code examples to reinforce the concepts</span>. D3 + SVG is a great resource for anyone who cares about creating products that people love.
+          </blockquote>
+          <a class="py-4">
+            &#8213; <a href="https://venturplex.com/">Lukas Ruebbelke</a>, Chief Builder, VenturPlex
+          </p>
+        </div>
+      </div>
 
       <!-- OVERCOME OBJECTIONS -->
       <a name="objections"></a>
