Tweak thank you

--- a/static/thanks/index.html
+++ b/static/thanks/index.html
@@ -63,6 +63,8 @@
         The first email, <strong>D3 Day 1: Building Blocks</strong>, is on its way to your inbox. If you don't see it soon, please check your spam folder.
       </p>
 
+      <!-- CHEAT SHEET -->
+      <!--
       <h2 class="pt-4 pb-1 text-3xl text-left">
         Free Bonus for jQuery folks
       </h2>
@@ -80,8 +82,9 @@
           </button>
         </a>
       </div>
+      -->
 
-      <h2 class="mt-8 pt-8 pb-1 text-left text-3xl font-light">
+      <h2 class="pt-4 pb-1 text-left text-3xl font-light">
         15% off my book <span class="whitespace-no-wrap">D3 + SVG</span>
       </h2>
       <p class="pb-4">
@@ -91,7 +94,7 @@
         The book picks up exactly where the course leaves off. It's divided into 2 parts covering the basics of SVG itself, and then using D3 APIs to create SVG charts programmatically. It's also chock full of CodePen examples with context and explanation for each.
       </p>
       <p class="pb-4">
-        Pssst, it bundles the whole D3 in 5 Days course as a single PDF. You can learn the basics in a single afternoon instead of a week.
+        Pssst, <strong><em>it also bundles the whole D3 in 5 Days course</em></strong> as a single PDF. You can learn the basics in a single afternoon instead of a week.
       </p>
       <div class="mb-8">
         <a href="http://drip.la/c/eyJhY2NvdW50X2lkIjoiNDQzNjE4NyIsInRyaWdnZXJfaWQiOiI5NzA2ODMyNDciLCJkeW5hbWljX3VybCI6bnVsbCwidXJsIjoiaHR0cHM6Ly9iZW5jbGlua2luYmVhcmQuY29tL2Qzc3ZnLyJ9" rel="nofollow">
