--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -320,9 +320,21 @@
         </div>
       </div>
       <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
+        <img src="../headshots/sebastian.jpg" width="120" height="120" class="rounded-full" />
+        <div class="lg:pl-4">
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;The video lessons are top-notch.&quot;</h3>
+          <blockquote class="italic text-grey-darker font-light">
+            If you’ve tried to learn D3 before and ended up with half-built visualizations and a hodge-podge of copied and pasted code, this is what you’ve been looking for. D3 + SVG condenses Ben’s knowledge into a 100% actionable product that will get you the results you want. The book is gold and <span class="bg-yellow-light px-1">the video lessons are top-notch</span> over-the-top helpful.
+          </blockquote>
+          <p class="py-4">
+            &#8213; <a href="http://dashingd3js.com">Sebastian Gutierrez</a>, Principal, Dashing D3.js
+          </p>
+        </div>
+      </div>
+      <div class="testimonial flex flex-col lg:flex-row items-center lg:items-start pb-6">
         <img src="../headshots/alan.jpg" width="120" height="120" class="rounded-full" />
         <div class="lg:pl-4">
-          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;The examples are spot on&quot;</h3>
+          <h3 class="pt-4 pb-2 text-grey-darkest text-2xl text-center md:text-left md:pt-0">&quot;The examples are spot on.&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
             A great introduction to d3. <span class="bg-yellow-light px-1">The examples are spot on</span> and cover everything you need to know to get started.
           </blockquote>
