--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -438,14 +438,6 @@
     </div>
   </div>
   <div class="center measure-wide f5 lh-copy ph4 ph0-l">
-    <h1 class="lh-title tc mb0 dn db-ns">Want the whole course now?</h1>
-    <h1 class="lh-title tc mb0 dn-ns">Hate waiting?</h1>
-    <div class="flex flex-column items-center pv2 f4-ns">
-      <p>You can get all the lessons immediately, plus a book and 20 extra CodePen examples in <a href="http://d3svg.com">D3 + SVG: How to Create Flawless Charts for Any Screen</a>.</p>
-      <p>A book that picks up where D3 in 5 Days finishes, you also get the full D3 in 5 Days course as a single PDF. You could probably read them both in an afternoon. You can even get a 2.5 hour video course, <em>Build Interactive JavaScript Charts with D3 v4</em>. <a href="http://d3svg.com">Click here to learn more!</a></p>
-    </div>
-  </div>
-  <div class="center measure-wide f5 lh-copy ph4 ph0-l">
     <h1 class="lh-title tc mb0 dn db-ns">Who is the intended audience?</h1>
     <h1 class="lh-title tc mb0 dn-ns">Who is this for?</h1>
     <div class="flex flex-column items-center pv2 f4-ns">
@@ -533,15 +525,28 @@
       </div>
     </div>
   </div>
+  <div class="center measure-wide f5 lh-copy ph4 ph0-l pb4">
+    <h1 class="lh-title tc mb0 dn db-ns">Want the whole course now?</h1>
+    <h1 class="lh-title tc mb0 dn-ns">Hate waiting?</h1>
+    <div class="flex flex-column items-center pv2 f4-ns">
+      <p>You can get all the lessons immediately, plus a book and 20 extra CodePen examples in <a href="http://d3svg.com">D3 + SVG: How to Create Flawless Charts for Any Screen</a>.</p>
+      <p>D3 + SVG is a book that picks up right where D3 in 5 Days leaves off, and you even get the full D3 in 5 Days course as a single PDF! You could probably read them both in an afternoon. You can even get a 2.5 hour video course, <em>Build Interactive JavaScript Charts with D3 v4</em> when you buy The Complete Bundle. <a href="http://d3svg.com">Click here to learn more!</a></p>
+    </div>
+  </div>
   <div class="bg-black-10">
     <div class="center measure-wide f5 lh-copy pt3 ph4 ph0-l">
       <h1 class="lh-title tc mb0">Who created this?</h1>
       <div class="flex flex-column items-center pv2 f4-ns">
         <img src="../headshots/ben.jpg" width="120" height="120" class="mv3 br-100" />
         <div class="pb5">
-          <p>Ben Clinkinbeard is a web developer with nearly two decades of experience focused on D3, React, Node, and ES6+. In addition to professional consulting, Ben shares his knowledge through <a href="https://benclinkinbeard.com/posts/" class="dark-blue link underline hover-bg-lightest-blue">blogging</a>, conference presentations, and <a href="https://egghead.io/instructors/ben-clinkinbeard" class="dark-blue link underline hover-bg-lightest-blue">video tutorials</a>.</p>
           <p>
-            Since 2014 <span class="bg-lightest-blue">more than 25,000 developers have spent over 18,000 hours watching his video lessons.</span>
+            Ben Clinkinbeard is the author of <em>D3 + SVG: How to Create Flawless Charts for Any Screen</em>, and the video course <em>Build Interactive JavaScript Charts with D3</em>. To date, more than 25,000 developers have spent over 18,000 hours watching his video lessons.
+          </p>
+          <p>
+            Ben helps organizations improve their data visualization capabilities. Want to see if he can help you?
+          </p>
+          <p>
+            <a href="mailto:ben@knowbetter.io?subject=Maybe we should work together?">Click here to get in touch!</a>
           </p>
         </div>
       </div>
