--- a/static/thanks/index.html
+++ b/static/thanks/index.html
@@ -88,7 +88,7 @@
         15% off my book <span class="whitespace-no-wrap">D3 + SVG</span>
       </h2>
       <p class="pb-4">
-        Turbo charge your charting chops with my book <em>D3 + SVG: How to Create Flawless Charts for Any Screen</em> which is available to you at 15% off any tier if you use coupon code <code>INNERCIRCLE</code> at checkout.
+        Turbo charge your charting chops with my book <em>D3 + SVG: How to Create Flawless Charts for Any Screen</em>. For the <strong>next ten days get 15% off</strong> any tier by using coupon code <code>INNERCIRCLE</code> at checkout.
       </p>
       <p class="pb-4">
         The book picks up exactly where the course leaves off. It's divided into 2 parts covering the basics of SVG itself, and then using D3 APIs to create SVG charts programmatically. It's also chock full of CodePen examples with context and explanation for each.
