--- a/static/d3in5days/index.html
+++ b/static/d3in5days/index.html
@@ -42,12 +42,12 @@
       <div class="hero_bg_image" style="background: url(bg.jpg) no-repeat center; background-size: cover !important;"></div>
     </div>
     <div class="hero_content">
-      <div class="md:m-8">
+      <div class="mt-8 md:m-8">
         <h1 class="d35d-headline">Learn D3.js in 5 Days</h1>
         <h2 class="hidden md:block text-2xl font-light opacity-75">Daily lessons delivered straight to your inbox</h2>
         <h2 class="md:hidden text-2xl font-light opacity-75">Lessons straight to your inbox</h2>
       </div>
-      <div id="form-container" class="md:p-8 pb-8">
+      <div id="form-container" class="md:p-8 pb-8 mt-8">
         <form id="d35d-landing-form" class="w-full text-center" action="https://www.getdrip.com/forms/64356965/submissions" method="post"
           data-drip-embedded-form="64356965">
           <fieldset class="m-0 p-0">
@@ -209,9 +209,9 @@
   <div class="content-column w-screen mt-8 text-xl" style="background-color: #e5e5e5">
     <section class="max-w-md mx-auto text-center">
       <h2 class="hidden md:block">Who's responsible for this?</h2>
-      <h2 class="md:hidden"></h2>
+      <h2 class="md:hidden">Who did this?</h2>
       <img src="../headshots/ben.jpg" width="120" height="120" class="my-4 rounded-full" />
-      <div class="pb-8 text-left">
+      <div class="px-6 pb-8 text-left">
         <p>
           Ben Clinkinbeard is the author of <em>D3 + SVG: How to Create Flawless Charts for Any Screen</em>, and the video course <em>Build Interactive JavaScript Charts with D3</em>. To date, more than 25,000 developers have spent over 18,000 hours watching his video lessons.
         </p>
