--- a/static/d3in5days/syntax/index.html
+++ b/static/d3in5days/syntax/index.html
@@ -37,15 +37,13 @@
 
 <body>
 
-  <div class="hero_syntax">
+  <div class="hero">
     <div class="hero_bg">
       <div class="hero_bg_image" style="background: url(../bg.jpg) no-repeat center; background-size: cover !important;"></div>
     </div>
-    <div class="absolute w-screen">
-      <img src="logo.png" width="250" class="mx-auto" alt="Syntax logo">
-    </div>
     <div class="hero_content">
       <div class="md:m-8">
+        <img src="logo.png" width="250" class="mx-auto" alt="Syntax logo">
         <h1 class="d35d-headline">Learn D3.js in 5 Days</h1>
         <h2 class="hidden md:block text-2xl font-light opacity-75">Daily lessons delivered straight to your inbox</h2>
         <h2 class="md:hidden text-2xl font-light opacity-75">Lessons straight to your inbox</h2>
